<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="nmedia" translatable="false">NMedia!</string>
    <string name="hello">Hello, World!</string>

    <string name="description_post_author_name">Post author name</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_view">View</string>
    <string name="description_post_edit_cancel">Cancel</string>
    <string name="description_post_video">Video post</string>

    <string name="heart" translatable="false">Heart</string>
    <string name="countLikes" translatable="false">10</string>
    <string name="countReposts" translatable="false">5</string>
    <string name="countViews" translatable="false">500K</string>
    <string name="description_post_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="create_post">Create post</string>
    <string name="openLinkVideo">Choose how to open the video</string>
    <string name="play_video">Play video</string>
    <string name="google_play_unavailable">Google API Not Available</string>
    <string name="notification_user_liked">%1$s liked the post %2$s</string>
    <string name="notification_new_post">%1$s posted a new post:</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from a remote server</string>
</resources>