<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/standard_padding"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        android:contentDescription="@string/description_post_author_name"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageView
        android:id="@+id/avatar"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/description_post_author_avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@sample/posts.json/data/authorAvatar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/PostMenuStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        app:icon="@drawable/baseline_more_vert_24"
        app:iconSize="@dimen/menu_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrierHeader"
        app:constraint_referenced_ids="published, avatar"
        app:barrierDirection="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/content"
        android:layout_marginTop="@dimen/common_spacing"
        tools:text="@sample/posts.json/data/content"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrierHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrierContent"
        app:constraint_referenced_ids="content"
        app:barrierDirection="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        app:icon="@drawable/ic_like"
        android:checkable="true"
        android:background="@android:color/transparent"
        style="@style/LikeStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/repost"
        app:icon="@drawable/ic_share_24"
        android:background="@android:color/transparent"
        style="@style/SecondButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginLeft="@dimen/indent_number"
        android:contentDescription="@string/description_post_share"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/viewsContent"
        app:icon="@drawable/ic_eye_24"
        android:background="@android:color/transparent"
        style="@style/SecondButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginRight="@dimen/indent_number"
        android:contentDescription="@string/description_post_view"
        app:layout_constraintEnd_toEndOf="@+id/content"
        app:layout_constraintTop_toBottomOf="@+id/content" />





</androidx.constraintlayout.widget.ConstraintLayout>