<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@+id/publish_menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        tools:text="@sample/posts.json/data/published" />

    <ImageView
        android:id="@+id/avatar"
        android:contentDescription="@string/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@sample/posts.json/data/authorAvatar" />

    <ImageButton
        android:id="@+id/publish_menu"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrierHeader"
        app:constraint_referenced_ids="published, avatar"
        app:barrierDirection="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/content"
        android:layout_marginTop="@dimen/common_spacing"
        tools:text="@sample/posts.json/data/content"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrierHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrierContent"
        app:constraint_referenced_ids="content"
        app:barrierDirection="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/heart"
        android:src="@drawable/baseline_favorite_border_24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <TextView
        android:id="@+id/countLike"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginLeft="@dimen/indent_number"
        app:layout_constraintStart_toEndOf="@+id/heart"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:text="@string/countLikes" />

    <ImageView
        android:id="@+id/repost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginLeft="@dimen/indent_number"
        android:contentDescription="@string/heart"
        android:src="@drawable/baseline_polyline_24"
        app:layout_constraintStart_toEndOf="@+id/countLike"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <TextView
        android:id="@+id/countRepost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginLeft="@dimen/indent_number"
        app:layout_constraintStart_toEndOf="@+id/repost"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:text="@string/countReposts" />

    <ImageView
        android:id="@+id/viewsContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginRight="@dimen/indent_number"
        android:contentDescription="@string/heart"
        android:src="@drawable/baseline_remove_red_eye_24"
        app:layout_constraintEnd_toStartOf="@+id/countViews"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <TextView
        android:id="@+id/countViews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:text="@string/countViews" />




</androidx.constraintlayout.widget.ConstraintLayout>